rusty-cdk-macros/tests/fails/app_config_name_too_long.rs
use rusty_cdk_macros::app_config_name;

fn main() {
    app_config_name!("aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa");
}
